tests/NormalTests/paczka1/small_fuzzy/88718570.err
Error in line 6: 51ccuYBpe A57 88,6
Error in line 11: r3LsqQt S986 75,2
